welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:3: error: value unary_! is not a member of Int
  if (!10<=a && a<=20 && 10<=b && b<=20){return 0}} 
      ^max1020:3: error: type mismatch;
 found   : Unit
 required: Int
  if (!10<=a && a<=20 && 10<=b && b<=20){return 0}} 
  ^